// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Schematic's trackEvent destination action: all fields 1`] = `
Object {
  "body": Object {
    "company": Object {
      "testType": "H%fspr!Jez(TWP",
    },
    "event": "H%fspr!Jez(TWP",
    "traits": Object {
      "testType": "H%fspr!Jez(TWP",
    },
    "user": Object {
      "user_id": "H%fspr!Jez(TWP",
    },
  },
  "event_type": "track",
}
`;

exports[`Testing snapshot for Schematic's trackEvent destination action: required fields 1`] = `
Object {
  "body": Object {
    "event": "H%fspr!Jez(TWP",
  },
  "event_type": "track",
}
`;
